add find all user, create user, encrypted password
